fixed meditation spacing

--- a/med.css
+++ b/med.css
@@ -63,7 +63,7 @@ h2{
 	position: relative; 
 	 position:relative;
     transition: .5s ease;
-    top: -550px;
+    top: -370px;
     left: 750 px;
     right: -735px;
     bottom: -191px;
