--- a/parents.css
+++ b/parents.css
@@ -17,8 +17,8 @@ font-size: 25px;
 
 .button {
     background-color: transparent; 
-    border: solid white;
-    color: white;
+    border: solid black;
+    color: black;
     padding: 16px 32px;
     text-align: center;
     text-decoration: none;
